// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization Should able to login properly 1`] = `
Object {
  "exp": Any<Number>,
  "iat": Any<Number>,
  "role": "User",
  "userId": 1,
}
`;

exports[`Authorization Should able to login properly 2`] = `
Object {
  "exp": Any<Number>,
  "iat": Any<Number>,
  "refresh": true,
  "role": "User",
  "userId": 1,
}
`;

exports[`Authorization Should able to request refresh token with refresh token 1`] = `
Object {
  "exp": Any<Number>,
  "iat": Any<Number>,
  "role": "User",
  "userId": 1,
}
`;

exports[`Authorization Should able to request refresh token with refresh token 2`] = `
Object {
  "exp": Any<Number>,
  "iat": Any<Number>,
  "refresh": true,
  "role": "User",
  "userId": 1,
}
`;
